Don't add undo commands for colorize mask update state

This property doesn't satisfy normal switching conditions, therefore
the commands compression may sometimes get crazy.

BUG:434257